app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@import "tailwindcss";


@theme {
  --font-retro: 'Press Start 2P', cursive;
}

@theme inline {
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);

  /* !! Add in order: --color-Object–Variant–Property !!
  ex. --color-badge-neutral-text (Text for neutral badge) */
  
  /* BACKGROUND header, footer, other  */
  --color-bg-body: var(--bg-body);
  --color-bg-main: var(--bg-main);
  --color-bg-secondary: var(--bg-secondary);
  --color-bg-tertiary: var(--bg-tertiary);
  --color-bg-surface: var(--bg-surface);
  --color-element-border: var(--element-border);

  --color-border-separator: var(--border-separator);

  /* TEXT */
  
  --color-text-primary: var(--text-primary);
  --color-text-secondary: var(--text-secondary);
  --color-text-tertiary: var(--text-tertiary);
  --color-text-neutral: var(--text-neutral);
  

  /* BUTTONS, MENU and other */
  --color-btn-primary-bg: var(--color-text-secondary);
  --color-btn-primary-border: var(--color-text-tertiary);
  --color-btn-primary-bg-hover: var(--color-text-tertiary);
  --color-btn-primary-text: var(--color-text-primary);


  /* STATS and BADGES*/
  --color-badge-primary-from: var(--badge-primary-from);
  --color-badge-primary-to: var(--badge-primary-to);
  --color-badge-primary-border: var(--badge-primary-border);
  --color-badge-primary-text: var(--badge-primary-text);

  --color-badge-neutral-bg: var(--badge-neutral-bg);
  --color-badge-neutral-text: var(--badge-neutral-text);
  --color-badge-neutral-border: var(--badge-neutral-border);

  /* UI future terminal style */
  --color-terminal-border: var(--terminal-border);
  --color-terminal-bg: var(--terminal);

  --color-terminal-main-text: var(--terminal-main-text);
  --color-terminal-ghost-text: var(--terminal-ghost-text);
  --color-terminal-success: var(--terminal-success);
  --color-terminal-wrong: var(--terminal-wrong);
  --color-terminal-wrong-bg: var(--terminal-wrong-bg);
  
}

@layer base {
  :root {
    --bg-body: #F7FCFF;
    --bg-main: #1A1953;
    --bg-secondary: #162E93;
    --bg-tertiary: #a8a8a8;
    --bg-surface: #F7FAFF;
    --element-border: #121a2b;

    --border-separator: #E0DDED;

    --text-primary: #FDFCFF;
    --text-secondary: #162E93;
    --text-tertiary: #2F2FE4;
    --text-neutral: #6B6A6A;

    --badge-primary-from: #B8CEFF;
    --badge-primary-to: #D6DEFF;
    --badge-primary-border: #AAC2FA;
    --badge-primary-text: #2053C9;

    --badge-neutral-bg: #edebeb;
    --badge-neutral-text: #5E5E5E;
    --badge-neutral-border: #a8a8a8;

    --terminal-border: #26324d;
    --terminal-bg: #ffffff;

    --terminal-main-text: #000000;
    --terminal-ghost-text: #878686;
    --terminal-success: #22c55e;
    --terminal-wrong: #ef4444;
    --terminal-wrong-bg: #ffabab;
  }

  .theme-lavender {
    --bg-body: #fef0ff;
    --bg-main: #9046CF;
    --bg-secondary: #CC59D2;
    --bg-tertiary: #f4c9ea;
    --bg-surface: #fef0ff;
    --element-border: #652f94;

    --border-separator: #E0DDED;

    --text-primary: #FDFCFF;
    --text-secondary: #CC59D2;
    --text-tertiary: #F487B6;
    --text-neutral: #6B6A6A;

    --badge-primary-from: #f7c5d7;
    --badge-primary-to: #f6cbdb;
    --badge-primary-border: #FABDD3;
    --badge-primary-text: #e9659e;

    --badge-neutral-bg: #edd8ed;
    --badge-neutral-text: #5E5E5E;
    --badge-neutral-border: #a08e9b;

    --terminal-border: #652f94;
    --terminal-bg: #fef0ff;

    --terminal-main-text: #000000;
    --terminal-ghost-text: #878686;
    --terminal-success: #22c55e;
    --terminal-wrong: #ef4444;
    --terminal-wrong-bg: #ffabab;
  }

  .theme-olive {
    --bg-body: #E3E2E1;
    --bg-main: #9ABB6D;
    --bg-secondary: #6E984F;
    --bg-tertiary: #504B43;
    --bg-surface: #E3E2E1;
    --element-border: #59813c;

    --border-separator: #D1CEBA;

    --text-primary: white;
    --text-secondary: #6E984F;
    --text-tertiary: #7cbb4f;
    --text-neutral: #6B6A6A;

    --badge-primary-from: #6b655b;
    --badge-primary-to: #767065;
    --badge-primary-border: #504B43;
    --badge-primary-text: #110d08;

    --badge-neutral-bg: #e8e6d8;
    --badge-neutral-text: #5E5E5E;
    --badge-neutral-border: #D1CEBA;

    --color-terminal-border: #6E984F;
    --color-terminal-bg: #fbfff7;

    --terminal-main-text: #000000;
    --terminal-ghost-text: #878686;
    --terminal-success: #22c55e;
    --terminal-wrong: #ef4444;
    --terminal-wrong-bg: #ffabab;
  }
}

.settings-icon {
  color: var(--bg-surface);
}

